src/components/LandingPage/LandingPage.scss
@use "../../spacing" as *;
@use "../../font-size" as *;
@import "../../colours.scss";
@import "../../mixins.scss";

:root * {
  --rpf-button-primary-background-color: #{$rpf-teal-800};
  --rpf-button-primary-background-color-hover: #{$rpf-teal-900};
  --rpf-button-primary-background-color-active: #{$rpf-teal-900};
  --rpf-button-primary-text-color: #{$rpf-text-primary};
}

.landing-page-button__content * {
  display: inline-flex;
  gap: 0.5rem;
  align-items: center;
  svg {
    fill: $rpf-text-primary;
  }
}

.landing-page-wrapper {
  display: flex;
  flex-direction: column;
  padding: $space-1-5;
  align-items: center;
  gap: $space-1;
  flex: 1 0 0;
  align-self: stretch;

  @media screen and (min-width: 768px) {
    padding: $space-5 $space-7-5;
    gap: $space-4;
  }
}

// Projects

.landing-page__projects {
  text-align: center;
}

.landing-page__projects--title {
  @include font-size-2-5(regular);
  margin: $space-1;

  @media screen and (min-width: 375px) {
    @include font-size-3(regular);
  }
}

.landing-page__projects--subtitle {
  @include font-size-1-5(regular);
  font-weight: var(--font-weight-regular);
  margin: $space-1;

  @media screen and (min-width: 375px) {
    @include font-size-2(regular);
  }
}

.landing-page__projects--login {
  @include font-size-1-25(regular);
  button {
    font-weight: var(--font-weight-bold);
    padding: 0;
    text-decoration: underline;
  }
}

// Paths
.landing-page__paths {
  border-radius: $space-1-5;
  margin: 0 $space-1-5;
  max-width: 368px;
  padding: $space-1-5 $space-1 0;
  text-align: center;
  width: 100%;

  @media screen and (min-width: 768px) {
    align-items: center;
    display: flex;
    text-align: left;
    padding: 0 $space-2;
    max-width: 634px;
  }
}

.landing-page__paths-copy {
  margin: auto;

  @media screen and (min-width: 768px) {
    margin: unset;
    max-width: 300px;
  }
}

.landing-page__paths--title {
  @include font-size-1-5(regular);
  font-weight: var(--font-weight-bold);
}

.landing-page__button {
  @include font-size-1-25(regular);

  a {
    color: $rpf-black;
    text-decoration: none;
  }
}

.landing-page__paths--start {
  @include font-size-1-5(regular);
  font-weight: var(--font-weight-bold);
}

.landing-page__paths--description {
  @include font-size-1(regular);
  a {
    font-weight: var(--font-weight-bold);
  }
}

.landing-page__paths-media {
  margin-bottom: -2px;

  img {
    aspect-ratio: 3/2;
    display: block;
    margin: auto;
    max-width: 301px;
    width: 100%;
  }

  @media screen and (min-width: 768px) {
    margin-left: auto;

    img {
      margin: unset;
      width: unset;
    }
  }
}

.landing-page__link {
  color: $rpf-teal-900;
}

// Dark mode

.--light {
  .landing-page__paths {
    background-color: $rpf-white;
  }

  .landing-page-wrapper {
    background-color: $rpf-teal-100;
  }

  .landing-page__projects--login {
    button {
      color: $rpf-teal-900;
    }
  }

  .landing-page__projects--buttons {
    @include font-size-1-25(regular);
    display: flex;

    gap: $space-0-5;
    width: fit-content;
    align-items: stretch;
    @include font-size-1-25(regular);

    a {
      color: $rpf-black;
      text-decoration: none;
    }
  }

  .landing-page__paths--description {
    a {
      color: $rpf-teal-900;
    }
  }
}

.--dark {
  * {
    --rpf-button-primary-background-color: #{$rpf-teal-400};
    --rpf-button-primary-background-color-hover: #{$rpf-teal-600};
  }
  .landing-page__paths {
    background-color: $rpf-grey-800;
  }

  .landing-page-wrapper {
    background-color: $rpf-grey-700;
  }

  .landing-page__projects--login {
    button {
      color: $rpf-teal-400;
    }
  }

  .landing-page__paths--description {
    a {
      color: $rpf-teal-800;
    }
  }
}

